[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.43", features = ["full"] }
quinn = "0.11"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Bevy ECS and App for simulation
bevy_app = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }
bevy_time = { version = "0.15", default-features = false }
futures = "0.3"
rcgen = "0.12"
rustls = "0.23"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
